--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Update Build Date
         run: sed -i "s/@build-time@/`date +%Y%m%d%H%M%S`/" WeakAuras/Init.lua
 
+      - name: Copy Retail toc
+        run: mv Weakauras/WeakAuras-retail.toc WeakAuras/WeakAuras.toc
+
       - name: Create Retail Package
         uses: BigWigsMods/packager@master
         env:
@@ -41,6 +44,9 @@ jobs:
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
           WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
           WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
+
+      - name: Copy Classic toc
+        run: mv Weakauras/WeakAuras-classic.toc WeakAuras/WeakAuras.toc
 
       - name: Create Classic Package
         uses: BigWigsMods/packager@master
